# managesieve

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  docs.yml
examples/: demo.rs
managesieve-cli/: Cargo.toml
managesieve-cli/src/: main.rs
managesieve-client-cli/: Cargo.toml
managesieve-client-cli/src/: main.rs
src/: capabilities.rs  client.rs  lib.rs  sasl.rs  sieve_name.rs
src/commands/: authenticate.rs  check_script.rs  connect.rs  definitions.rs  errors.rs  get_script.rs  have_space.rs  list_scripts.rs  logout.rs  mod.rs  put_script.rs  start_tls.rs
src/internal/: command.rs  mod.rs  parser.rs  response.rs
src/parser/: mod.rs  responses.rs
src/parser/test_input/: response_capability-1.txt
