[package]
name = "managesieve"
version = "0.1.1"
authors = ["Andy Grover <andy@groveronline.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Support for parsing ManageSieve protocol (RFC 5804)"

[dependencies]
futures = "0.3.30"

#snafu = "0.8.2"
thiserror = "1.0.63"
tracing = "0.1"

winnow = "0.6.6"
either = "1.6.1"

futures-rustls = { version = "0.26.0", default-features = false, features = ["ring"] }
webpki-roots = "0.26.1"
webpki = "0.22.4"
sasl = { version = "0.5.1", features = []}
base64 = "0.22.0"

[dev-dependencies]
clap = { version = "4.5.4", features = [
    "derive",
    "env",
] }
tokio = { version = "1.37.0", features = [
    "macros",
    "rt-multi-thread",
    "net",
]}
tokio-util = { version = "0.7.10", features = [
    "compat",
]}
eyre = "0.6.12"
tracing-subscriber = "0.3"

[lints.clippy]
type_complexity = "allow"
