[package]
name = "managesieve-client-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sieve-client"
path = "src/main.rs"

[dependencies]
managesieve = { workspace = true }

tracing = "0.1"
color-eyre = "0.6.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1.37.0", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt",
]}
tokio-util = { version = "0.7.10", features = [
    "compat",
]}

clap = { version = "4.5.4", features = [
    "derive",
    "env",
] }
rpassword = "7.4.0"


[lints]
workspace = true